--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -1130,7 +1130,7 @@
       <object class="GtkHeaderBar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="title">Color Profile Viewer</property>
+        <property name="title" translatable="yes">Color Profile Viewer</property>
         <property name="show_close_button">True</property>
       </object>
     </child>
