--- a/src/gcm-picker.ui
+++ b/src/gcm-picker.ui
@@ -321,7 +321,7 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
       <object class="GtkHeaderBar" id="headerbar">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="title">Color Picker</property>
+        <property name="title" translatable="yes">Color Picker</property>
         <property name="show_close_button">True</property>
         <child>
           <object class="GtkButton" id="button_measure">
